# useriam_pin_auth

./: OAT.xml  README.md  README_ZH.md  README_zh.md  bundle.json  hisysevent.yaml  ohos.build  pin.diff  pin_auth.gni  pinauth.gni
frameworks/: BUILD.gn  pin_auth_framework_map
frameworks/client/inc/: inputer_data_impl.h  inputer_get_data_service.h  inputer_impl.h  pinauth_register_impl.h  settings_data_manager.h
frameworks/client/src/: inputer_data_impl.cpp  inputer_get_data_service.cpp  inputer_impl.cpp  pinauth_register.cpp  pinauth_register_impl.cpp  settings_data_manager.cpp
frameworks/include/: i_inputer_data_proxy.h  i_inputer_stub.h  inputer_data_impl.h  pinauth_defines.h  pinauth_log_wrapper.h  pinauth_proxy.h
frameworks/ipc/common_defines/: inputer_get_data.h  inputer_get_data_ipc_interface_code.h  inputer_set_data.h  inputer_set_data_ipc_interface_code.h  pin_auth_interface.h  pin_auth_interface_ipc_interface_code.h
frameworks/ipc/inc/: i_inputer_data_proxy.h  i_inputer_data_stub.h  i_inputer_proxy.h  i_inputer_stub.h  inputer_get_data_proxy.h  inputer_get_data_stub.h  inputer_set_data_proxy.h  inputer_set_data_stub.h  pin_auth_proxy.h  pin_auth_stub.h  pinauth_proxy.h  pinauth_stub.h
frameworks/ipc/src/: i_inputer_data_proxy.cpp  i_inputer_data_stub.cpp  i_inputer_stub.cpp  inputer_get_data_proxy.cpp  inputer_get_data_stub.cpp  inputer_set_data_proxy.cpp  inputer_set_data_stub.cpp  pin_auth_proxy.cpp  pin_auth_stub.cpp  pinauth_proxy.cpp
frameworks/log/: pinauth_defines.h  pinauth_log_wrapper.h
frameworks/scrypt/inc/: scrypt.h
frameworks/scrypt/src/: scrypt.cpp
frameworks/src/: i_inputer_data_proxy.cpp  i_inputer_stub.cpp  inputer_data_impl.cpp  pinauth_proxy.cpp  pinauth_register.cpp
hdi/: BUILD.gn
hdi/adaptor/inc/: adaptor_algorithm.h  adaptor_file.h  adaptor_log.h  adaptor_memory.h  adaptor_time.h  file_operator.h
hdi/adaptor/src/: adaptor_algorithm.c  adaptor_file.c  adaptor_log.c  adaptor_memory.c  adaptor_time.c  file_operator.c
hdi/common/inc/: buffer.h  defines.h
hdi/common/src/: buffer.c
hdi/database/inc/: pin_db.h
hdi/database/src/: pin_db.c
hdi/main/inc/: pin_auth.h  pin_entry.h  pin_func.h
hdi/main/src/: pin_auth.cpp  pin_entry.cpp  pin_func.c
interfaces/kits/napi/: BUILD.gn
interfaces/kits/napi/inc/: inputer_impl.h
interfaces/kits/napi/include/: inputer_impl.h  (+4 more)
sa_profile/: 5204.xml  902.xml  941.xml  BUILD.gn  pinauth_bionic.cfg  pinauth_sa_profile.cfg  pinauth_sa_profile.rc  pinauth_sys.cfg
sa_profile/default/: 941.json
sa_profile/dynamic_load/: 941.json  pinauth_sa_profile.cfg
sa_profile/wearable/: pinauth_sa_profile.cfg
services/: BUILD.gn  pin_auth_service_map
services/include/: i_inputer_data_impl.h  i_inputer_data_stub.h  i_inputer_proxy.h  i_inputter_data_impl.h  pinauth_common_event_subscriber.h  pinauth_controller.h  pinauth_driver_hdi.h  pinauth_executor_callback_hdi.h  pinauth_executor_hdi.h  pinauth_hdi_factory.h  pinauth_manager.h  pinauth_service.h  pinauth_stub.h
services/modules/utils/: pinauth_defines.h
services/sa/inc/: pin_auth_service.h  pinauth_service.h
services/sa/src/: pin_auth_service.cpp  pinauth_service.cpp
services/src/: i_inputer_data_impl.cpp  i_inputer_data_stub.cpp  i_inputer_proxy.cpp  i_inputter_data_impl.cpp  pinauth_common_event_subscriber.cpp  pinauth_controller.cpp  pinauth_driver_hdi.cpp  pinauth_executor_callback_hdi.cpp  pinauth_executor_hdi.cpp  pinauth_hdi_factory.cpp  pinauth_manager.cpp  pinauth_service.cpp  pinauth_stub.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/common_fuzzer/: BUILD.gn
test/fuzztest/inputerdata_fuzzer/: BUILD.gn  inputer_data_fuzzer.cpp  inputer_data_fuzzer.h
test/fuzztest/inputersetdatastub_fuzzer/: BUILD.gn  inputer_set_data_stub_fuzzer.cpp  inputer_set_data_stub_fuzzer.h
test/fuzztest/pin_auth_service_fuzzer/: BUILD.gn  pin_auth_service_fuzzer.cpp  pin_auth_service_fuzzer.h
test/fuzztest/pinauthservice_fuzzer/: BUILD.gn  pin_auth_service_fuzzer.cpp
test/fuzztest/pinauthstub_fuzzer/: BUILD.gn  pin_auth_stub_fuzzer.cpp
test/fuzztest/utils_fuzz/: iam_fuzz_test.cpp
test/unittest/: BUILD.gn
test/unittest/inc/: framework_client_pinauth_register_impl_test.h  framework_scrypt_scrypt_test.h  inputer_data_impl_test.h  inputer_get_data_proxy_test.h  inputer_get_data_service_test.h  inputer_get_data_stub_test.h  inputer_set_data_proxy_test.h  inputer_set_data_stub_test.h  pin_auth_executor_callback_manager_test.h  pin_auth_load_mode_test.h  pin_auth_proxy_test.h  pin_auth_register_test.h  pin_auth_service_test.h  pin_auth_stub_test.h  pinauth_test.h  services_inputer_data_impl_test.h  services_modules_driver_pin_auth_interface_adapter_test.h  services_pin_auth_manager_test.h
test/unittest/mocks/: mock_iall_in_one_executor.h  mock_icollector_executor.h  mock_iexecute_callback.h  mock_iexecutor.h  mock_inputer.h  mock_inputer_data_impl.h  mock_inputer_get_data.h  mock_inputer_get_data_service.h  mock_inputer_set_data.h  mock_ipin_auth_interface.h  mock_iverifier_executor.h  mock_pin_auth_interface.h  mock_pin_auth_interface_adapter.h  mock_pin_auth_service.h  mock_remote_object.h
test/unittest/src/: framework_client_pinauth_register_impl_test.cpp  framework_scrypt_scrypt_test.cpp  inputer_data_impl_test.cpp  inputer_get_data_proxy_test.cpp  inputer_get_data_service_test.cpp  inputer_get_data_stub_test.cpp  inputer_set_data_proxy_test.cpp  inputer_set_data_stub_test.cpp  pin_auth_all_in_one_hdi_unit_test.cpp  pin_auth_collector_hdi_unit_test.cpp  pin_auth_driver_hdi_unit_test.cpp  pin_auth_executor_callback_hdi_unit_test.cpp  pin_auth_executor_callback_manager_test.cpp  pin_auth_executor_hdi_unit_test.cpp  pin_auth_load_mode_test.cpp  pin_auth_proxy_test.cpp  pin_auth_register_test.cpp  pin_auth_service_test.cpp  pin_auth_stub_test.cpp  pin_auth_verifier_hdi_unit_test.cpp  pinauth_test.cpp  services_inputer_data_impl_test.cpp  services_modules_driver_pin_auth_interface_adapter_test.cpp  services_pin_auth_manager_test.cpp
unittest/: BUILD.gn
unittest/include/: pinauth_test.h
unittest/src/: pinauth_test.cpp
(+114 files in other folders)
