# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

pinauth_root_path = "//base/user_iam/pin_auth"

useriam_sa_path = "${pinauth_root_path}/sa_profile"

pinauth_services_path = "${pinauth_root_path}/services"

pinauth_frameworks_path = "${pinauth_root_path}/frameworks"

pinauth_interfaces_path = "${pinauth_root_path}/interfaces"

pinauth_kits_path = "${pinauth_interfaces_path}/kits"

pinauth_innerkits_path = "${pinauth_interfaces_path}/innerkits"

aafwk_path = "//foundation/aafwk/standard"

appexecfwk_path = "//foundation/appexecfwk/standard"
