# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("pinauth_config") {
  include_dirs = [
    "//base/useriam/pin_auth/frameworks/client/inc",
    "//base/useriam/pin_auth/frameworks/ipc/inc",
    "//base/useriam/pin_auth/interfaces/inner_api/include",
    "//base/useriam/user_auth_framework/common/logs",
    "//base/useriam/user_auth_framework/interfaces/inner_api",
  ]
}

ohos_shared_library("pinauth_framework") {
  sources = [
    "client/src/inputer_data_impl.cpp",
    "client/src/pinauth_register.cpp",
    "ipc/src/i_inputer_data_proxy.cpp",
    "ipc/src/i_inputer_stub.cpp",
    "ipc/src/pinauth_proxy.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  deps = [
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/openssl:libcrypto_static",
  ]

  public_configs = [ ":pinauth_config" ]

  defines = [
    "PINAUTH_LOG_TAG = \"PinAuth\"",
    "LOG_DOMAIN = 0xD002422",
  ]

  subsystem_name = "useriam"
  part_name = "pin_auth"
}
