# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("pinauth_config") {
  include_dirs = [
    "//base/useriam/pin_auth/frameworks/client/inc",
    "//base/useriam/pin_auth/interfaces/inner_api",
    "//base/useriam/pin_auth/frameworks/scrypt/inc",
    "//base/useriam/user_auth_framework/interfaces/inner_api",
  ]
}

config("pinauth_ipc_config") {
  include_dirs = [
    "ipc/inc",
    "ipc/common_defines",
  ]
}

ohos_shared_library("pinauth_framework") {
  sources = [
    "client/src/inputer_data_impl.cpp",
    "client/src/inputer_get_data_service.cpp",
    "client/src/pinauth_register.cpp",
    "scrypt/src/scrypt.cpp",
  ]

  deps = [
    "//base/useriam/pin_auth/frameworks:pinauth_ipc",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/openssl:libcrypto_static",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  configs = [
    "//base/useriam/user_auth_framework/common:iam_log_config",
    "//base/useriam/user_auth_framework/common:iam_utils_config",
    "//base/useriam/pin_auth/frameworks/:pinauth_ipc_config",
  ]

  public_configs = [ ":pinauth_config" ]

  defines = [
    "PINAUTH_LOG_TAG = \"PinAuth\"",
    "LOG_DOMAIN = 0xD002422",
  ]
  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = "useriam"
  part_name = "pin_auth"
}

ohos_source_set("pinauth_ipc") {
  include_dirs = [
    "ipc/inc",
    "ipc/common_defines",
    "//base/useriam/user_auth_framework/interfaces/inner_api",
  ]

  sources = [
    "ipc/src/inputer_get_data_proxy.cpp",
    "ipc/src/inputer_get_data_stub.cpp",
    "ipc/src/inputer_set_data_proxy.cpp",
    "ipc/src/inputer_set_data_stub.cpp",
    "ipc/src/pin_auth_proxy.cpp",
    "ipc/src/pin_auth_stub.cpp",
  ]

  configs = [ "//base/useriam/user_auth_framework/common:iam_log_config" ]
  public_configs = [ ":pinauth_ipc_config" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}
