#
# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
import("//build/ohos.gni")
import("//build/ohos_var.gni")

ohos_shared_library("pinauth_hdi") {
    part_name = "pinauthmgr"
    subsystem_name = "pinauth"

    sources = [
        "adaptor/src/adaptor_file.c",
        "adaptor/src/adaptor_time.c",
        "adaptor/src/file_operator.c",
        "adaptor/src/adaptor_algorithm.c",
        "adaptor/src/adaptor_log.c",
        "adaptor/src/adaptor_memory.c",
        "common/src/buffer.c",
        "database/src/pin_db.c",
        "main/src/pin_func.c",
        "main/src/pin_entry.cpp"
    ]

    include_dirs = [
        "adaptor/inc",
        "common/inc",
        "database/inc",
        "main/inc",
        "//third_party/openssl/include",
    ]

    deps = [
        "//utils/native/base:utils",
        "//third_party/openssl:libcrypto_static",
    ]

    external_deps = [
        "hiviewdfx_hilog_native:libhilog"
    ]
}

