# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/sa_profile/sa_profile.gni")
import("../pin_auth.gni")

ohos_sa_profile("pinauth_sa_profile") {
  sources = []
  if (pin_auth_enable_dynamic_load) {
    sources += [ "dynamic_load/941.json" ]
  } else {
    sources += [ "default/941.json" ]
  }

  part_name = "pin_auth"
}

ohos_prebuilt_etc("pinauth_sa_profile.init") {
  if (pin_auth_enable_dynamic_load) {
    source = "dynamic_load/pinauth_sa_profile.cfg"
  } else {
    source = "default/pinauth_sa_profile.cfg"
  }
  relative_install_dir = "init"
  subsystem_name = "useriam"
  part_name = "pin_auth"
}
