# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("pin_auth_services_config") {
  include_dirs = [
    "//base/useriam/pin_auth/services/sa/inc",
    "//base/useriam/pin_auth/services/modules/driver/inc",
    "//base/useriam/pin_auth/services/modules/executors/inc",
    "//base/useriam/pin_auth/services/modules/inputters/inc",
    "//base/useriam/user_auth_framework/common/logs",
    "//base/useriam/user_auth_framework/common/utils",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
  ]
}

ohos_shared_library("pinauthservice") {
  sources = [
    "//base/useriam/pin_auth/services/modules/driver/src/pinauth_driver_hdi.cpp",
    "//base/useriam/pin_auth/services/modules/executors/src/pinauth_executor_callback_hdi.cpp",
    "//base/useriam/pin_auth/services/modules/executors/src/pinauth_executor_hdi.cpp",
    "//base/useriam/pin_auth/services/modules/inputters/src/i_inputer_data_impl.cpp",
    "//base/useriam/pin_auth/services/modules/inputters/src/pinauth_manager.cpp",
    "//base/useriam/pin_auth/services/sa/src/pin_auth_service.cpp",
  ]

  configs = [ ":pin_auth_services_config" ]

  deps = [
    "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "//base/useriam/pin_auth/frameworks:pinauth_framework",
    "//base/useriam/user_auth_framework/common/executors:userauth_executors",
    "//third_party/openssl:libcrypto_static",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_pin_auth:libpin_auth_proxy_1.0",
    "hdf_core:libhdf_utils",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbeget_proxy",
    "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = "useriam"
  part_name = "pin_auth"
}
