# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("pin_auth_fuzz_test") {
  testonly = true
  deps = [
    "frameworks/ipc/inputergetdataproxy_fuzzer:InputerGetDataProxyFuzzTest",
    "frameworks/ipc/inputersetdatastub_fuzzer:InputerSetDataStubFuzzTest",
    "frameworks/ipc/pinauthstub_fuzzer:PinAuthStubFuzzTest",
    "services/modules/driver/pinauthdriverhdi_fuzzer:PinAuthDriverHdiFuzzTest",
    "services/modules/executors/pinauthallinonehdi_fuzzer:PinAuthAllInOneHdiFuzzTest",
    "services/modules/executors/pinauthcollectorhdi_fuzzer:PinAuthCollectorHdiFuzzTest",
    "services/modules/executors/pinauthexecutorcallbackhdi_fuzzer:PinAuthExecutorCallbackHdiFuzzTest",
    "services/modules/executors/pinauthverifierhdi_fuzzer:PinAuthVerifierHdiFuzzTest",
    "services/modules/inputters/inputerdata_fuzzer:InputerDataFuzzTest",
    "services/modules/inputters/pinauthmanager_fuzzer:PinAuthManagerFuzzTest",
    "services/sa/pinauthservice_fuzzer:PinAuthServiceFuzzTest",
  ]
}
