# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "pin_auth/PinAuth_UT_test"

ohos_unittest("PinAuth_UT_test") {
  module_out_path = module_output_path

  sources = [
    "src/inputer_data_impl_test.cpp",
    "src/inputer_get_data_proxy_test.cpp",
    "src/inputer_get_data_service_test.cpp",
    "src/inputer_get_data_stub_test.cpp",
    "src/inputer_set_data_proxy_test.cpp",
    "src/inputer_set_data_stub_test.cpp",
    "src/pin_auth_driver_hdi_unit_test.cpp",
    "src/pin_auth_executor_callback_hdi_unit_test.cpp",
    "src/pin_auth_executor_hdi_unit_test.cpp",
    "src/pin_auth_proxy_test.cpp",
    "src/pin_auth_register_test.cpp",
    "src/pin_auth_service_test.cpp",
    "src/pin_auth_stub_test.cpp",
  ]

  include_dirs = [
    "inc",
    "mocks",
    "//base/useriam/pin_auth/interfaces/inner_api",
    "//base/useriam/pin_auth/services/sa/inc",
    "//base/useriam/pin_auth/services/modules/driver/inc",
    "//base/useriam/pin_auth/services/modules/executors/inc",
    "//base/useriam/pin_auth/services/modules/inputters/inc",
    "//base/useriam/user_auth_framework/common/logs",
    "//base/useriam/user_auth_framework/common/utils",
    "//base/useriam/user_auth_framework/common/executors/include/public",
    "//base/useriam/user_auth_framework/interfaces/inner_api",
  ]

  deps = [
    "//base/useriam/pin_auth/frameworks:pinauth_framework",
    "//base/useriam/pin_auth/services:pinauthservice",
    "//third_party/googletest:gmock",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "drivers_interface_pin_auth:libpin_auth_proxy_1.0",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  configs = [
    "//base/useriam/pin_auth/services:pin_auth_services_config",
    "//base/useriam/user_auth_framework/common:iam_log_config",
    "//base/useriam/pin_auth/frameworks/:pinauth_ipc_config",
    "//base/useriam/user_auth_framework/common:iam_utils_config",
  ]
}

ohos_unittest("PinAuth_Service_test") {
  module_out_path = module_output_path

  sources = [ "src/pinauth_test.cpp" ]

  include_dirs = [
    "inc",
    "//base/useriam/pin_auth/interfaces/inner_api",
  ]

  deps = [
    "//base/useriam/pin_auth/frameworks:pinauth_framework",
    "//base/useriam/pin_auth/services:pinauthservice",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  configs = [
    "//base/useriam/pin_auth/services:pin_auth_services_config",
    "//base/useriam/user_auth_framework/common:iam_log_config",
    "//base/useriam/pin_auth/frameworks/:pinauth_ipc_config",
    "//base/useriam/user_auth_framework/common:iam_utils_config",
  ]
}
