# Copyright (C) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "pin_auth/PinAuth_UT_test"

ohos_unittest("PinAuth_UT_test") {
  module_out_path = module_output_path

  sources = [
    "../../frameworks/client/src/inputer_data_impl.cpp",
    "../../frameworks/client/src/inputer_get_data_service.cpp",
    "../../frameworks/client/src/pinauth_register_impl.cpp",
    "../../frameworks/scrypt/src/scrypt.cpp",
    "../../services/modules/driver/src/pin_auth_driver_hdi.cpp",
    "../../services/modules/driver/src/pin_auth_interface_adapter.cpp",
    "../../services/modules/executors/src/pin_auth_executor_callback_hdi.cpp",
    "../../services/modules/executors/src/pin_auth_executor_hdi.cpp",
    "../../services/modules/inputters/src/i_inputer_data_impl.cpp",
    "../../services/modules/inputters/src/pin_auth_manager.cpp",
    "../../services/sa/src/pin_auth_service.cpp",
    "src/inputer_data_impl_test.cpp",
    "src/inputer_get_data_proxy_test.cpp",
    "src/inputer_get_data_service_test.cpp",
    "src/inputer_get_data_stub_test.cpp",
    "src/inputer_set_data_proxy_test.cpp",
    "src/inputer_set_data_stub_test.cpp",
    "src/pin_auth_driver_hdi_unit_test.cpp",
    "src/pin_auth_executor_callback_hdi_unit_test.cpp",
    "src/pin_auth_executor_hdi_unit_test.cpp",
    "src/pin_auth_proxy_test.cpp",
    "src/pin_auth_register_test.cpp",
    "src/pin_auth_service_test.cpp",
    "src/pin_auth_stub_test.cpp",
  ]

  include_dirs = [
    "inc",
    "mocks",
    "../../interfaces/inner_api",
    "../../services/sa/inc",
    "../../services/modules/driver/inc",
    "../../services/modules/executors/inc",
    "../../services/modules/inputters/inc",
    "../../common/logs",
    "../../common/utils",
  ]

  deps = [
    "../../frameworks:pinauth_ipc",
    "//third_party/googletest:gmock",
    "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "drivers_interface_pin_auth:libpin_auth_proxy_1.0",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "user_auth_framework:userauth_client",
    "user_auth_framework:userauth_executors",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  configs = [
    "../../services:pin_auth_services_config",
    "../../frameworks:pinauth_config",
    "../../common:iam_log_config",
    "../../frameworks/:pinauth_ipc_config",
    "../../common:iam_utils_config",
  ]

  subsystem_name = "useriam"
  part_name = "pin_auth"
}

ohos_unittest("PinAuth_Service_test") {
  module_out_path = module_output_path

  sources = [ "src/pinauth_test.cpp" ]

  include_dirs = [
    "inc",
    "../../interfaces/inner_api",
  ]

  deps = [ "../../services:pinauthservice" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "pin_auth:pinauth_framework",
    "safwk:system_ability_fwk",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  configs = [
    "../../common:iam_log_config",
    "../../frameworks/:pinauth_ipc_config",
    "../../common:iam_utils_config",
  ]

  subsystem_name = "useriam"
  part_name = "pin_auth"
}
