# Copyright (C) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "pin_auth/PinAuth_UT_test"

ohos_unittest("PinAuth_UT_test") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"
  module_out_path = module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sources = [
    "src/framework_client_pinauth_register_impl_test.cpp",
    "src/framework_scrypt_scrypt_test.cpp",
    "src/inputer_data_impl_test.cpp",
    "src/inputer_get_data_proxy_test.cpp",
    "src/inputer_get_data_service_test.cpp",
    "src/inputer_get_data_stub_test.cpp",
    "src/inputer_set_data_proxy_test.cpp",
    "src/inputer_set_data_stub_test.cpp",
    "src/pin_auth_all_in_one_hdi_unit_test.cpp",
    "src/pin_auth_collector_hdi_unit_test.cpp",
    "src/pin_auth_driver_hdi_unit_test.cpp",
    "src/pin_auth_executor_callback_hdi_unit_test.cpp",
    "src/pin_auth_proxy_test.cpp",
    "src/pin_auth_register_test.cpp",
    "src/pin_auth_service_test.cpp",
    "src/pin_auth_stub_test.cpp",
    "src/pin_auth_verifier_hdi_unit_test.cpp",
    "src/services_inputer_data_impl_test.cpp",
    "src/services_pin_auth_manager_test.cpp",
  ]

  include_dirs = [
    "inc",
    "mocks",
  ]

  deps = [
    "../../frameworks:pinauth_framework_source_set",
    "../../frameworks:pinauth_ipc",
    "../../services:pinauthservice_source_set",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "drivers_interface_pin_auth:libpin_auth_proxy_2.1",
    "googletest:gmock",
    "hilog:libhilog",
    "ipc:ipc_single",
    "openssl:libcrypto_shared",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "user_auth_framework:userauth_client",
    "user_auth_framework:userauth_executors",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  configs = [
    "../../frameworks:pinauth_config",
    "../../common:iam_log_config",
    "../../frameworks/:pinauth_ipc_config",
    "../../common:iam_utils_config",
  ]

  subsystem_name = "useriam"
  part_name = "pin_auth"
}

ohos_unittest("PinAuth_Service_test") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"
  module_out_path = module_output_path

  sources = [ "src/pinauth_test.cpp" ]

  include_dirs = [
    "inc",
    "../../interfaces/inner_api",
  ]

  deps = [ "../../services:pinauthservice" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "pin_auth:pinauth_framework",
    "safwk:system_ability_fwk",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  configs = [
    "../../common:iam_log_config",
    "../../frameworks/:pinauth_ipc_config",
    "../../common:iam_utils_config",
  ]

  subsystem_name = "useriam"
  part_name = "pin_auth"
}
