# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/useriam/pinauth/pinauth.gni")
import("//build/ohos.gni")

config("pin_auth_napi_public_config") {
  include_dirs = [
    "include"
  ]
}

ohos_shared_library("pinauth") {
  sources = [
    "src/pin_auth_helper.cpp",
    "src/pin_auth_impl.cpp",
    "src/pin_native_module.cpp",
    "src/inputer_impl.cpp"
  ]

  public_configs = [ ":pin_auth_napi_public_config" ]

  deps = [
    "${pinauth_frameworks_path}:pinauth_frameworks",
    "//foundation/ace/napi:ace_napi",
    "//utils/native/base:utils",
  ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"
  subsystem_name = "pinauth"
  part_name = "pinauthmgr"
}

